# nibbles

./: CMakeLists.txt  README.md  full_build.bat  only_cmake_build.bat  pyproject.toml
core/: CMakeLists.txt  file_to_nibbles.h  nibble.h  nibble_intervals.h  nibbles_io.h  scheme.h
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scheme_model.cpp  scheme_model.h
